Updated the layout

--- a/public/assets/css/dorang.css
+++ b/public/assets/css/dorang.css
@@ -11122,7 +11122,7 @@ a:hover {
   min-height: 600px;
   text-align: center;
   color: #fff;
-  background-image: url(../imgs/header.jpg);
+  /* background-image: url(../imgs/header.jpg); */
   background-size: cover;
   background-position: center;
   -webkit-transition: .2s;
