--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,9 @@
 .datePicker {
-    width: 75%;
-    margin-left: auto !important;
-    margin-right: auto !important;
-  }
+  width: 75%;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
+.timh{
+  height: 60px;
+}
